2001-05-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDate.m: GSTimeNow() remove volatile typespec and move
	initialisation of interval in the hope of fixing a problem with
	float operations.  In any case, the code is tidier.

2001-05-03  Adam Fedor  <fedor@gnu.org>

	* configure.in: Don't use -lobjc with NeXT_RUNTIME. Check for -lm.

	* Headers/gnustep/base/objc-gnu2next.h: Add sel_register_name
	* Source/behavior.m: Add define hacks for Darwin.

2001-05-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject: ([+initialize]) Move GSSetLocale() after platform
	specific code with conditionally compiled variable declarations.
	Should make this work on BSD and MINGW again.

2001-05-02  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSObject.m ([NSObject +initialize]): fixed a FreeBSD specific
	code bug introduced by the call of GSSetLocaleC().

Wed May  2 13:19:13 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/UnixFileHandle.m (id): Redefine `id' when including
	openssl header files to avoid syntax errors from 3.x serie gcc
	compilers.

2001-05-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone: ([-initWithName:]) fix for trivial locking bug.

2001-04-30  Adam Fedor  <fedor@gnu.org>

	* Source/behavior.m: Rewrite to work with NeXT runtime.
	* Headers/gnustep/base/objc-gnu2next.h: Add some extra translations.

2001-04-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: parseQuotedString() handle \U escape sequences
	of eight digit hex encoded unicode values.
	([descriptionWithLocale:indent:to@]) handle unicode strings by using
	\U escape sequences in output C string.

2000-04-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSString.m: 
	Corrected bug in last optimization for the parsing of property
	list. Now the bitmap representation is retained not the
	characterset itself. This did cause undeterministic problems when
	reading in the Info.plist.

2001-04-28  Richard Frith-Macdonald <rfm@gnu.org>
